# My-beginner-repository

./: .gitginore  .gitignore  .gitmodules  README.md
CS_GO DEV/Maps/: de_Ins_pre-alpha.vmf  de_ins_pre-alpha.prt
GoldSRC/Hammer/: GameCfg.wc
Personal Configs/: arch_cheatsheet.md  readme.md
Personal Configs/Base Emacs/: .emacs  .emacs.custom.el  custom-vars.el  early-init.el  init.el  init_old.el
Personal Configs/Doom Emacs/ELTito's Config/: config.el  config.org  custom.el  flycheck_config.el  init.el  packages.el
Personal Configs/Doom Emacs/ElTito's Config 2/: config.el  custom.el  init.el  packages.el
Personal Configs/alacritty/: alacritty.toml
Personal Configs/kitty/: kitty.conf
Personal Configs/nvim/: init.lua  lazy-lock.json
Personal Configs/nvim/lua/: config.lua
Personal Configs/nvimConfigBackup/: init.lua  lazy-lock.json
Personal Configs/nvimConfigBackup/lua/: config.lua
Personal Configs/oh-my-zsh/: .zshrc
Practices/C/: I-O.c  advanced-calc.c  arrays.c  basic-calculator.c  cli_calc.c  constant.c  dataTypes.c  functions.c  gas_bill.c  guessing-game.c  hello.c  if-stament.c  mad-libs.c  numbers.c  return.c  sort_array.c  structs.c  structs2.c  switch-statement.c  while.c
Practices/C++/: Ejercicio 2 entrada salida.cpp  Ejercicio 3.cpp  Hello World.cpp  ejercicio_determinar el mayor.cpp  estructura basica C++.cpp
Practices/C++/Bloque 1-2/: ejercicio operaciones aritmeticas.cpp  lecturaYentrada.cpp  tipo de datos basicos.cpp
Practices/C++/Bloque 3/: bloque3_cajeroautomatico  bloque3_cajeroautomatico.cpp  bloque3_determinar_numeroparoimpar.cpp  bloque3_ejercicio10.cpp  bloque3_ejercicio2.cpp  bloque3_ejercicio4.cpp  bloque3_num_entero_a_romano.cpp  bloque3_rangodeedad.cpp
Practices/C++/Bloque 4/: bloque4_ejercicio2.cpp  bloque4_ejercicio4.cpp  bloque4_ejercicio8.cpp  bloque4_ejerciciotabla de multiplicar.cpp  bloque4_sentenciadowhlie.cpp  bloque4_sentenciafor.cpp  bloque4_sentenciawhile  bloque4_sentenciawhile.cpp  bloque4_sumadecuadrados.cpp  (+2 more)
Practices/C++/sdl3Test/: CMakeLists.txt
Practices/C++/sdl3Test/src/: main.cpp
Practices/C/gtkTest/: CMakeLists.txt
Practices/C/gtkTest/src/: main.c
Practices/EDA/: riscv32i-core.tlv
Practices/HTML 5/: test.html
Practices/MATLAB/: derivadas.mlx  ejercicio1.slx  func_rep.mlx  integral.m  optimization_prob.mlx
Practices/Python/: test.py
Practices/SQF/: Objectives.md
Practices/VHDL/: test.vhdl
Practices/markdown/: texto_filo.md
Practices/nodejs/: 1.os-system.js  10.free-port.js  2.file-system.js  3.fs-readFile.js  6.ls.js  7.process.js  9.http.js  package-lock.json  package.json  test2.txt
Practices/python/: 01_basic.ipynb  PyWhatKit_DB.txt  test.py
Practices/rust/: hello  hello.rs
Projectos/: readme.lua
Projectos/Aplicación cajero automatico/: README.md  cajero_automatico  cajero_automatico.c
Projectos/Dedidacted_CPU/: vhdl_ls.toml
Projectos/Example Radar DCS/: readme.lua
Projectos/RayLib Test/: RayLib Test.sln  premake5.lua
Projectos/Simple Bank Management/: sbm.c
Projectos/TCP_C/: server.c
Projectos/assembly/: test.asm
Projectos/bash_scripting/: test.sh  test2.sh
Projectos/c_donut/: Makefile  c_donut  donut.c
Projectos/infor-web/: README.md
Projectos/java_test/: riscvformatter.java
Projectos/libC_test/: Makefile  libmycode.c  librarytest  librarytest.c  mycode.h
Projectos/raylib-test/: Makefile  game
Projectos/robinhood-clone/: package-lock.json
UA/C/: campo_fut.c  dates.c  ej6.c  s4-triangulo-II.c  s6-triangulo.c  s7-cuad.c  temp_conv.c
(+558 files in other folders)
